final checkin please replace the //TODO temp before deliverying

--- a/ProfSite/Web.Release.config
+++ b/ProfSite/Web.Release.config
@@ -24,10 +24,15 @@
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.appid" value="437775256401079" />
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.appSecret" value="48e72d6671cdc836994175497cbedce6" />
     <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="facebook.en.redirectUrl" value="http://bravovets.azurewebsites.net/facebook/oauth_callback" />
+
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="twitter.en.oauth_callbackUrl" value="http://bravovets.azurewebsites.net/twitter/oauth_callback" />
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="twitter.en.consumer_key" value="QLzCTq81wqROCGB5NcBFg" />
+    <add xdt:Transform="SetAttributes" xdt:Locator="Match(key)" key="twitter.en.consumer_secret" value="07maM6ZQrKF8FB6gPG1a0Y2dhfwWAXE1MyBkDVlIsQ" />
+    
   </appSettings>
   <system.web>
-    <!--<compilation xdt:Transform="RemoveAttributes(debug)" />-->
-    <customErrors mode="Off" xdt:Transform="Insert" />
+    <compilation xdt:Transform="RemoveAttributes(debug)" />
+    <!--<customErrors mode="Off" xdt:Transform="Insert" />-->
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
