--- a/ProfSite/bin/ProfSite.dll.config
+++ b/ProfSite/bin/ProfSite.dll.config
@@ -19,6 +19,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-ProfSite-20140121095719.mdf;Initial Catalog=aspnet-ProfSite-20140121095719;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="BravoVetsDbEntities" connectionString="metadata=res://*/BravoVetsSql.csdl|res://*/BravoVetsSql.ssdl|res://*/BravoVetsSql.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=BravoVetsDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="BravoVetsDbEntities" connectionString="metadata=res://*/BravoVetsSql.csdl|res://*/BravoVetsSql.ssdl|res://*/BravoVetsSql.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=INBN265;initial catalog=BravoVetsDb;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <appSettings>
     
@@ -34,13 +35,13 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="facebook.en.appid" value="439769249535013" />
+    <!--<add key="facebook.en.appid" value="439769249535013" />
     <add key="facebook.en.appSecret" value="c42addb27e33e50dbaca8e679520c6a3" />
-    <add key="facebook.en.redirectUrl" value="http://localhost:2480/facebook/oauth_callback" />
+    <add key="facebook.en.redirectUrl" value="http://localhost:2480/facebook/oauth_callback" />-->
 
-    <!--<add key="facebook.en.appid" value="826237174060376" />
+    <add key="facebook.en.appid" value="826237174060376" />
     <add key="facebook.en.appSecret" value="bcb996b2e5b72d5c73c63331772c392d" />
-    <add key="facebook.en.redirectUrl" value="http://localhost/facebook/oauth_callback" />-->
+    <add key="facebook.en.redirectUrl" value="https://www.bravovets.co.uk/facebook/oauth_callback" />
 
     <add key="facebook.fr.appid" value="661907020511970" />
     <add key="facebook.fr.appSecret" value="822b3481eefc0f2d7ad8ff834128ef7c" />
@@ -80,11 +81,15 @@
 	
 	<add key="facebook.lat.appid" value="794193583981192" /> 
     <add key="facebook.lat.appSecret" value="77134ce19f858d8c6d3763b8873ba0f6" /> 
-    <add key="facebook.lat.redirectUrl" value="https://www.bravovets-latam.com/facebook/oauth_callback" /> 
+    <add key="facebook.lat.redirectUrl" value="https://www.bravovets-latam.com/facebook/oauth_callback" />
 
-    <add key="twitter.en.oauth_callbackUrl" value="http://bravovets.azurewebsites.net/twitter/oauth_callback" />
+    <add key="twitter.en.oauth_callbackUrl" value="https://www.bravovets.co.uk/twitter/oauth_callback" />
     <add key="twitter.en.consumer_key" value="QLzCTq81wqROCGB5NcBFg" />
     <add key="twitter.en.consumer_secret" value="07maM6ZQrKF8FB6gPG1a0Y2dhfwWAXE1MyBkDVlIsQ" />
+
+    <!--<add key="twitter.en.oauth_callbackUrl" value="http://bravovets.azurewebsites.net/twitter/oauth_callback" />
+    <add key="twitter.en.consumer_key" value="QLzCTq81wqROCGB5NcBFg" />
+    <add key="twitter.en.consumer_secret" value="07maM6ZQrKF8FB6gPG1a0Y2dhfwWAXE1MyBkDVlIsQ" />-->
 
     <add key="twitter.fr.oauth_callbackUrl" value="https://www.bravovets.fr/twitter/oauth_callback" />
     <add key="twitter.fr.consumer_key" value="Lu0JWgcH1nng5kUgd13jw" />
